--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,3 +44,8 @@ package-dir = {"" = "src"}
 [tool.setuptools.packages.find]
 where = ["src"]
 include = ["speclike*"]
+
+[tool.pytest.ini_options]
+markers = [
+    "speclike: tag set marker",
+]
